Fix forms on iOS devices

--- a/css/common-forms.less
+++ b/css/common-forms.less
@@ -108,6 +108,7 @@
 	color: @color-swatch5;
 	margin: 0;
 	box-shadow: inset 0px 0px 0px 2px @color-swatch2;
+	-webkit-appearance: none;
 
 	@media only screen and (max-width : 460px) {
 		font-size: (@font-swatch7-font-size * 0.75);
